{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 72,
  "lineage": "dbe2548c-5ee5-a999-a011-6d2b54f949f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "stage-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016f9ed1cecb276ed",
            "association_id": "eipassoc-01a3a6d21d3ba5933",
            "domain": "vpc",
            "id": "eipalloc-016f9ed1cecb276ed",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a5849e5eaee28dec",
            "private_dns": "ip-10-0-1-133.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-18-140-31-197.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.31.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cicd-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b89f7b3f054b957e",
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:instance/i-01031e503a1cd4a39",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01031e503a1cd4a39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "stage1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e617054628ef4bce",
            "private_dns": "ip-172-31-40-252.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.252",
            "public_dns": "ec2-54-179-130-88.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.130.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ead11f533cfed33c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "jenkins-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060549087f71cc584",
            "tags": {
              "Name": "stage-jenkns"
            },
            "tags_all": {
              "Name": "stage-jenkns"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df8565ad132e8afb"
            ]
          },
          "dependencies": [
            "aws_key_pair.stage1",
            "aws_security_group.cicd-jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b89f7b3f054b957e",
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:instance/i-0d47cdda4772eeb7c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d47cdda4772eeb7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stages",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1dd2971fa824428",
            "private_dns": "ip-172-31-37-29.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.29",
            "public_dns": "ec2-13-229-118-188.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.118.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f15126ae33a463bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tom-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060549087f71cc584",
            "tags": {
              "Name": "stage-tom"
            },
            "tags_all": {
              "Name": "stage-tom"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cd8b819027889d8"
            ]
          },
          "dependencies": [
            "aws_key_pair.stages",
            "aws_security_group.tom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b89f7b3f054b957e",
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:instance/i-00b7f26a73878d7c5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b7f26a73878d7c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stage",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bef93b9dff66eb19",
            "private_dns": "ip-172-31-42-26.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.26",
            "public_dns": "ec2-54-169-202-66.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.202.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09aedbf9a9489af8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tomcat-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060549087f71cc584",
            "tags": {
              "Name": "stage-tomcat"
            },
            "tags_all": {
              "Name": "stage-tomcat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08fa698a29573c1bd"
            ]
          },
          "dependencies": [
            "aws_key_pair.stage",
            "aws_security_group.tomcat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:internet-gateway/igw-0e551c0e52b69677a",
            "id": "igw-0e551c0e52b69677a",
            "owner_id": "983098380356",
            "tags": {
              "Name": "stage-igw"
            },
            "tags_all": {
              "Name": "stage-igw"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "stage-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016f9ed1cecb276ed",
            "connectivity_type": "public",
            "id": "nat-0d1de8e6920816551",
            "network_interface_id": "eni-0a5849e5eaee28dec",
            "private_ip": "10.0.1.133",
            "public_ip": "18.140.31.197",
            "subnet_id": "subnet-0a233c24d639d723a",
            "tags": {
              "Name": "stage-Ngw"
            },
            "tags_all": {
              "Name": "stage-Ngw"
            }
          },
          "dependencies": [
            "aws_eip.stage-eip",
            "aws_subnet.stage-pub",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stage-rout-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:route-table/rtb-09c490e0d893d8d9a",
            "id": "rtb-09c490e0d893d8d9a",
            "owner_id": "983098380356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d1de8e6920816551",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-private-route"
            },
            "tags_all": {
              "Name": "stage-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.stage-eip",
            "aws_nat_gateway.stage-ngw",
            "aws_subnet.stage-pub",
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stage-rout-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:route-table/rtb-053bc7bb24eeb1d17",
            "id": "rtb-053bc7bb24eeb1d17",
            "owner_id": "983098380356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e551c0e52b69677a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-pub-route"
            },
            "tags_all": {
              "Name": "stage-pub-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f9882df158eac6b",
            "route_table_id": "rtb-053bc7bb24eeb1d17",
            "subnet_id": "subnet-00321e550c0c65d12"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.stage-rout-pub",
            "aws_subnet.stage-pub",
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f6d23fae044adb4",
            "route_table_id": "rtb-053bc7bb24eeb1d17",
            "subnet_id": "subnet-0a233c24d639d723a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.stage-rout-pub",
            "aws_subnet.stage-pub",
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd4b219f7b4a131e",
            "route_table_id": "rtb-053bc7bb24eeb1d17",
            "subnet_id": "subnet-0514b3855f3b5bcc9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.stage-rout-pub",
            "aws_subnet.stage-pub",
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cicd-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:security-group/sg-0df8565ad132e8afb",
            "description": "Allow admin to ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df8565ad132e8afb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting from enduser",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting to admins",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "983098380356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-jenkins-sg"
            },
            "tags_all": {
              "Name": "stage-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a54eb210751786d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:security-group/sg-02cd8b819027889d8",
            "description": "Allow admin to ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cd8b819027889d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting from enduser",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting to admins",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tom-sg",
            "name_prefix": "",
            "owner_id": "983098380356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-tom-sg"
            },
            "tags_all": {
              "Name": "stage-tom-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a54eb210751786d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:security-group/sg-08fa698a29573c1bd",
            "description": "Allow admin to ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fa698a29573c1bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting from enduser",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting to admins",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tomcat-sg",
            "name_prefix": "",
            "owner_id": "983098380356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-tomcat-sg"
            },
            "tags_all": {
              "Name": "stage-tomcat-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a54eb210751786d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-05a837383c9b024fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a837383c9b024fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-1-subnet"
            },
            "tags_all": {
              "Name": "stage-data-1-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-09691ed323221a165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09691ed323221a165",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-2-subnet"
            },
            "tags_all": {
              "Name": "stage-data-2-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-01ca89cac887329d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ca89cac887329d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-3-subnet"
            },
            "tags_all": {
              "Name": "stage-data-3-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-0b72257df20c4e336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b72257df20c4e336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-1-subnet"
            },
            "tags_all": {
              "Name": "stage-private-1-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-0eb154b8a65e80ee2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb154b8a65e80ee2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-2-subnet"
            },
            "tags_all": {
              "Name": "stage-private-2-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-0465430db95b458f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0465430db95b458f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-3-subnet"
            },
            "tags_all": {
              "Name": "stage-private-3-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stage-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-00321e550c0c65d12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00321e550c0c65d12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-1-subnet"
            },
            "tags_all": {
              "Name": "stage-pub-1-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-0a233c24d639d723a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a233c24d639d723a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-2-subnet"
            },
            "tags_all": {
              "Name": "stage-pub-2-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:subnet/subnet-0514b3855f3b5bcc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0514b3855f3b5bcc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "983098380356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-3-subnet"
            },
            "tags_all": {
              "Name": "stage-pub-3-subnet"
            },
            "vpc_id": "vpc-082ad5f40510eaadd"
          },
          "dependencies": [
            "aws_vpc.stage-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stage-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:983098380356:vpc/vpc-082ad5f40510eaadd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0655ef6fa00472e3c",
            "default_route_table_id": "rtb-0ab234b522c018440",
            "default_security_group_id": "sg-0828cd6738bbdcb3f",
            "dhcp_options_id": "dopt-0107128ff85b8c15b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-082ad5f40510eaadd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab234b522c018440",
            "owner_id": "983098380356",
            "tags": {
              "Name": "stage-vpc"
            },
            "tags_all": {
              "Name": "stage-vpc"
            }
          }
        }
      ]
    }
  ]
}